--- a/main.css
+++ b/main.css
@@ -1,3 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: aquamarine;
+  background-color: lightblue;
+}
+
+.pets {
+  display: flex;
+  flex-flow: wrap;
+  margin: 1em;
+  justify-content: space-evenly;
+}
+
+.pet {
+  margin: 2em;
+  text-align: center;
+}
+
+.pet-type {
+  text-transform: uppercase;
+}
+
+.pet img {
+  width: 350px;
+  height: 350px;
 }
