--- a/main.css
+++ b/main.css
@@ -27,3 +27,107 @@ body {
   width: 350px;
   height: 350px;
 }
+
+/*********************** Buttons ***********************/
+/*cat-button*/
+.catButton {
+  box-shadow: inset 0px 1px 0px 0px #cf866c;
+  background-color: red;
+  border-radius: 3px;
+  border: 1px solid #942911;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #854629;
+}
+.catButton:hover {
+  background: linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
+  background-color: #bc3315;
+}
+.catButton:active {
+  position: relative;
+  top: 1px;
+}
+
+/*dog-button*/
+.dogButton {
+  box-shadow: inset 0px 1px 0px 0px #cf866c;
+  background-color: blue;
+  border-radius: 3px;
+  border: 1px solid #942911;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #854629;
+}
+.dogButton:hover {
+  background: linear-gradient(to bottom, #bc3315 5%, #3415bc 100%);
+  background-color: #bc3315;
+}
+.dogButton:active {
+  position: relative;
+  top: 1px;
+}
+
+.buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 50px;
+}
+
+/*dino-button*/
+.dinoButton {
+  box-shadow: inset 0px 1px 0px 0px #cf866c;
+  background-color: green;
+  border-radius: 3px;
+  border: 1px solid #942911;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #854629;
+}
+.dinoButton:hover {
+  background: linear-gradient(to bottom, #bc3315 5%, #15bc1d 100%);
+  background-color: #bc3315;
+}
+.dinoButton:active {
+  position: relative;
+  top: 1px;
+}
+
+/*all-button*/
+.allButton {
+  box-shadow: inset 0px 1px 0px 0px #cf866c;
+  background-color: black;
+  border-radius: 3px;
+  border: 1px solid #942911;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #854629;
+}
+.allButton:hover {
+  background: linear-gradient(to bottom, #bc3315 5%, #15bc1d 100%);
+  background-color: black;
+}
+.allButton:active {
+  position: relative;
+  top: 1px;
+}
