--- a/main.css
+++ b/main.css
@@ -17,6 +17,9 @@ body {
 .pet {
   margin: 2em;
   text-align: center;
+  background-color: white;
+  padding: 5px;
+  border-radius: 3px;
 }
 
 .pet-type {
@@ -24,8 +27,15 @@ body {
 }
 
 .pet img {
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
+}
+
+.pet-name {
+  padding-top: 4px;
+  padding-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
 }
 
 /*********************** Buttons ***********************/
@@ -34,7 +44,7 @@ body {
   box-shadow: inset 0px 1px 0px 0px #cf866c;
   background-color: red;
   border-radius: 3px;
-  border: 1px solid #942911;
+  border: 1px solid white;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -42,11 +52,9 @@ body {
   font-size: 13px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #854629;
 }
 .catButton:hover {
-  background: linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
-  background-color: #bc3315;
+  background-color: darkred;
 }
 .catButton:active {
   position: relative;
@@ -58,7 +66,7 @@ body {
   box-shadow: inset 0px 1px 0px 0px #cf866c;
   background-color: blue;
   border-radius: 3px;
-  border: 1px solid #942911;
+  border: 1px solid white;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -66,11 +74,9 @@ body {
   font-size: 13px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #854629;
 }
 .dogButton:hover {
-  background: linear-gradient(to bottom, #bc3315 5%, #3415bc 100%);
-  background-color: #bc3315;
+  background-color: darkblue;
 }
 .dogButton:active {
   position: relative;
@@ -86,10 +92,9 @@ body {
 
 /*dino-button*/
 .dinoButton {
-  box-shadow: inset 0px 1px 0px 0px #cf866c;
-  background-color: green;
+  background-color: orange;
   border-radius: 3px;
-  border: 1px solid #942911;
+  border: 1px solid white;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -97,11 +102,9 @@ body {
   font-size: 13px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #854629;
 }
 .dinoButton:hover {
-  background: linear-gradient(to bottom, #bc3315 5%, #15bc1d 100%);
-  background-color: #bc3315;
+  background-color: darkorange;
 }
 .dinoButton:active {
   position: relative;
@@ -110,10 +113,9 @@ body {
 
 /*all-button*/
 .allButton {
-  box-shadow: inset 0px 1px 0px 0px #cf866c;
   background-color: black;
   border-radius: 3px;
-  border: 1px solid #942911;
+  border: 1px solid white;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
@@ -121,11 +123,9 @@ body {
   font-size: 13px;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #854629;
 }
 .allButton:hover {
-  background: linear-gradient(to bottom, #bc3315 5%, #15bc1d 100%);
-  background-color: black;
+  background-color: darkgray;
 }
 .allButton:active {
   position: relative;
