added bootstrap script connections and jumbotron and navbar elements

--- a/main.css
+++ b/main.css
@@ -131,3 +131,15 @@ body {
   position: relative;
   top: 1px;
 }
+
+/***Jumbotron***/
+.jumbotron {
+  background-color: white;
+}
+
+/***Navbar***/
+.navbar {
+  background-color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
